* OTH#0000 Split the contract invoice creation batch query to ease override
* BUG#7337 Delete draft and approved payments related to an invoice which is cancelled
* BUG#7004 Block renewal contract if there are missing posted/paid invoices on the current term
* FEA#7170 Cleaning reconciliation code: More modularity and possibilities for overriding
* BUG#7188 Add a loader on contract.billing_information
* BUG#7145 Can't select write-off journal in reconciliation wizard when processing a write-off
* FEA#6950 Add invoice related functions in rule engine
* BUG#6709 Fix of the bulk invoice set number batch according to the merge 4.4
* BUG#6372 Add checkbox on payment journal to define whether the payment suspension applies
* BUG#5290 Generate invoices for never invoiced contracts
* BUG#6473 Use today's date to generate invoice reports* FEA#6493 New invoice set number batch with improved speed
* BUG#6491 Take draft and approved payable payments into account before invoicing in invoice against balance batch
* BUG#6454 Do not set a payment date on non-direct-debit invoices
* OTH#0000 Fix tests
* BUG#6436 Restore fee availability in future invoices

Version 1.12 - 2017-04-28
* FEA#0000 Add batches to invoice contracts against their balance
* FEA#0000 Take maturity date into account for automatic reconciliation order
* FEA#0000 Color in red voided/terminated contracts with non zero balance_today
* FEA#0000 Add payment suspensions for a contract

Version 1.10 - 2016-11-02
* FEA#0000 Manage payer for direct debit billing mode

Version 1.8 - 2016-07-06
* FEA#0000 Add hold billing on hold sub status
* FEA#0000 Use intervaltree to speed up premium filtering
* FEA#0000 Allow to not prorate premiums
* FEA#0000 Add wizard to show aggregated lines on invoices

Version 1.6 - 2015-12-23
* FEA#0000 Allow to define specific fees for billing modes
* FEA#0000 Add set_number batch to let invoice.post be out scalable
* FEA#0000 Allow other uses for remainder when reconciling