@@ -1,3 +1,4 @@
+* BUG#7395 Add check on manual invoice cancelling
 * OTH#0000 Split the contract invoice creation batch query to ease override
 * BUG#7337 Delete draft and approved payments related to an invoice which is cancelled
 * BUG#7004 Block renewal contract if there are missing posted/paid invoices on the current term
